--- a/datavisual/templates/home.html
+++ b/datavisual/templates/home.html
@@ -196,13 +196,13 @@
                         <div class="card-body-icon">
                             <i class="fa fa-fw fa-support"></i>
                         </div>
-                        <div class="inner">
-                            <img src="{%static 'img/heater.png'%}" height="150px" width="100px">
-                            <label class="switch">
-                              <input class="actuator_sensor" id="4" type="checkbox"> 
-                              <div class="slider round"></div>
-                            </label>
-                        </div>
+                      <div class="inner">
+                        <img src="{%static 'img/heater.png'%}" height="150px" width="100px">
+                        <label class="switch">
+                          <input class="actuator_sensor" id="4" type="checkbox"> 
+                          <div class="slider round"></div>
+                          </label>
+                      </div>
                     </div>
                     <!-- <a class="card-footer text-white clearfix small z-1" href="#">
                       <span class="float-left">View Details</span>
@@ -212,6 +212,11 @@
                     </a> -->
                   </div>
                 </div>
+              </div>
+              <div class="Compostbtn">
+                <button class="SVC">Check Compost Readiness!</button>
+              </div>
+                
             <!-- Area Chart Example -->
             <!-- <div class="card mb-3">
               <div class="card-header">
@@ -284,6 +289,9 @@
                     controls(element_ID, state);
                 }
             });
+            $('.SVC').click(function(){
+              predict();
+            });
             setInterval(readings,1000);
             }
         );
@@ -317,7 +325,29 @@
                     console.log(data);
                 }     
             });
-        }
+          }
+          function predict(){
+            $.ajax({
+                type: "GET",
+                url: "api/read",
+                dataType:'json',
+                success: function(data){
+                    json = data["data"];
+                    var dat = json.reverse(data);
+                    conv_val = dat[0];
+                    console.log(conv_val)
+                    console.log(conv_val["State Of Completion"])
+                    state = conv_val["State Of Completion"]
+                    if (state == "NO"){
+                      // $.ajax({
+                      //   type: "GET",
+                      //   url: "ready"
+                      // });
+                      window.location.href = "ready"
+                    }
+                  }
+              });         
+            };          
     </script>
 </body>
 </html>
